--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,10 @@ spring:
       ddl-auto: none
   datasource:
     platform:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/whereToWatch
+    username: root
+    password: password
+    driverClassName:
 
 
 ---
@@ -34,5 +35,7 @@ spring:
 
     username:
     password:
+    driverClassName:
+
 
 
