--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,13 +28,13 @@ spring:
     database: mysql
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
   datasource:
     platform:
-    url:
+    url: jdbc:mysql://bf665299e38f73:0d1c73eb@us-cdbr-iron-east-02.cleardb.net/heroku_34709b4d7d7cffe?reconnect=true
 
-    username:
-    password:
+    username: bf665299e38f73
+    password: 0d1c73eb
     driverClassName:
 
 
